--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <h3 class="titulo">Sobre mí</h3>
             <p>
               <span class="bold">Técnico en Programación</span> por el Colegio
-              de Estudios Científicos y Tecnológicos del Estado de México,
-              <span class="bold">Ingeniero de Software</span> por la Universidad
+              de Estudios Científicos y Tecnológicos del Estado de México, estudiante de
+              <span class="bold">Ingeniería de Software</span> en la Universidad
               Autónoma de Querétaro. Conocimientos de PHP, Java, MySQL, creación
               de páginas web con distintas tecnologías y soporte técnico.
             </p>
