--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Primary Meta Tags -->
+<meta name="title" content="Diego Martínez Tabarez - Ing. de Software - Portafolio">
+<meta name="description" content="Conocimientos de PHP, Java, MySQL, creación de páginas web con distintas tecnologías y soporte técnico.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://gamordrkr.github.io/DiegoM.Tabarez-Portafolio/index.html">
+<meta property="og:title" content="Diego Martínez Tabarez - Ing. de Software - Portafolio">
+<meta property="og:description" content="Conocimientos de PHP, Java, MySQL, creación de páginas web con distintas tecnologías y soporte técnico.">
+<meta property="og:image" content="https://i.ibb.co/bQfXK1n/meta.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://gamordrkr.github.io/DiegoM.Tabarez-Portafolio/index.html">
+<meta property="twitter:title" content="Diego Martínez Tabarez - Ing. de Software - Portafolio">
+<meta property="twitter:description" content="Conocimientos de PHP, Java, MySQL, creación de páginas web con distintas tecnologías y soporte técnico.">
+<meta property="twitter:image" content="https://i.ibb.co/bQfXK1n/meta.jpg">
+
+    <meta name="keywords" content="Diego M. Tabarez, Diego Martínez Tabarez, Diego Martinez Tabarez, Portafolio"/>
+    <meta name="author" content="Diego Martínez Tabarez" />
+    <meta name="copyright" content="Propietario del copyright"/>
+    <meta property="og:image" content="https://i.ibb.co/bQfXK1n/meta.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diego M. Tabarez - Portafolio</title>
     <link rel="shortcut icon" href="img/2.ico"/>
