--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="theme-color" content="#317EFB"/>
     <!-- Primary Meta Tags -->
 <meta name="title" content="Diego Martínez Tabarez - Ing. de Software - Portafolio">
 <meta name="description" content="Conocimientos de PHP, Java, MySQL, creación de páginas web con distintas tecnologías y soporte técnico.">
@@ -64,7 +65,7 @@
           <div class="foto">
             <img
               src="img/2.png"
-              alt="Diego M. Tabarez"
+              alt="Diego Martinez Tabarez"
               width="200"
               height="200"
             />
@@ -88,7 +89,7 @@
           <div class="contenedor-trabajos">
             <div class="trabajo">
               <div class="thumb">
-                <img src="img/trabajos/1.png" alt="Trabajo 1" />
+                <img src="img/trabajos/1.png" alt="Sociedad Bolivariana del Perú" />
               </div>
               <div class="descripcion">
                 <p class="nombre">Sitio Web</p>
@@ -98,7 +99,7 @@
             </div>
             <div class="trabajo">
               <div class="thumb">
-                <img src="img/trabajos/2.png" alt="Trabajo 1" />
+                <img src="img/trabajos/2.png" alt="Multilingual System" />
               </div>
               <div class="descripcion">
                 <p class="nombre">Sitio Web</p>
@@ -108,7 +109,7 @@
             </div>
             <div class="trabajo">
               <div class="thumb">
-                <img src="img/trabajos/3.png" alt="Trabajo 1" />
+                <img src="img/trabajos/3.png" alt="La46 - Pastelería" />
               </div>
               <div class="descripcion">
                 <p class="nombre">Sitio Web</p>
